# SystemHotel

./: .gitignore  CMakeLists.txt  main.cpp
Libs/SocketIO_bin/src/: sio_message.h
Pkg/Common/: constant.h  matrix.h
Pkg/MVC/Controller/inc/: AdminController.h  NotiController.h  RoomController.h  UserController.h
Pkg/MVC/Controller/src/: AdminController.cpp  NotiController.cpp  RoomController.cpp  UserController.cpp
Pkg/MVC/Models/inc/: AdminModel.h  NotiModel.h  RoomModel.h  UserModel.h
Pkg/MVC/Models/src/: AdminModel.cpp  NotiModel.cpp  RoomModel.cpp  UserModel.cpp
Pkg/MVC/Views/: Booking.qml  BookingHistory.qml  CreateRoom.qml  CustomerList.qml  ImageSlider.qml  Login.qml  MainIntro.qml  Payment.qml  main.qml  resources.qrc
Pkg/Protocols/Http/Interfaces/: httpclient.cpp  httpclient.h
Pkg/Protocols/Http/inc/: nguonhttpclienttimpl.h
Pkg/Protocols/Http/src/: httpclientimpl.cpp  nguonhttptimpl.txt
Pkg/Protocols/SocketIO/inc/: NotiCtrl.h  SckQmlIF.h  SocketMgr.h  socketioclient.h
Pkg/Protocols/SocketIO/src/: NotiCtrl.cpp  SckQmlIF.cpp  SocketMgr.cpp  socketioclient.cpp
Pkg/Utils/Logger/inc/: logger.h
